master
- Mayhem
  Add /g/, /k/, /w/, /an/, /cgl/, /ck/, /lit/, /toy/ and /x/ archived image redirection.
  One-word-captcha now works in the report window.
  Fix duplicate file upload error link.
  Use 4chan's API to fetch posts for:
    - Quote Inlining.
    - Quote Previewing.
    - Comment Expansion.

2.34.10
- Mayhem
  Fix 4chan X. Blame moot.
  
2.34.9
- noface
  Re-adjust to new recaptcha - now only the control word is needed.

2.34.8
- small fixes

2.34.7
- noface
  Adjust to new recaptcha (now a space must be provided).

- Mayhem
  Fix support of change in 4chan's HTML about hidden filename in case of spoiler.

2.34.6
- Mayhem
  Fix cooldown on /q/.
  Fix thread creation with no file on /q/.
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/.
  Add /mlp/ archive redirection.

2.34.5
- Mayhem
  Add /q/ archive redirection.

2.34.4
- Mayhem
  Various fixes.
- ahodesuka
  Add png thumbnail replacement option.
- aeosynth
  Add Markdown.

2.34.3
- Mayhem
  Update /k/ archive redirection.
- noface
  Remove redundant entries from the updater

2.34.2
- noface
  Insert Quote Threading from aeosynths tree.

- Mayhem
  The Delete Links in the Menu now have a cooldown.

2.34.1
- Mayhem
  Divide the Delete Link in the Menu into a Post and Image deletion links.
  Add /wsg/ archive redirection.
  Add /fit/ archive redirection.

2.34.0
- Stallmanu
  Sage keybind
- that4chanwolf
  Remove Mayhem's stupidity.
  Redirect /jp/ to fuuka.warosu.org
  Autosage on /jp/ (now an option).
  Improve sage 'consistency'.
- Mayhem
  New feature: Menu, which
    - replaces and includes Report Button and Delete Button.
    - add one-click Filter buttons.
    - add download links to automatically save the file with its original filename. Chrome-only currently.
    - add archive links.
    - can integrate features from external userscripts/extensions, see https://github.com/MayhemYDG/4chan-x/wiki/Menu-API

2.33.8
- Mayhem
  Add Country filtering.

2.33.7